# minicorn

./: .gitignore  LICENSE  README.md  client.py  http_server.py  main.py  pyproject.toml  requirements.txt  server.py  wsgi_server.py
iotaX/: __init__.py  __main__.py  cli.py  server.py
minicorn/: __init__.py  __main__.py  asgi_server.py  cli.py  colors.py  wsgi_server.py
rhino/: __init__.py  __main__.py  cli.py  server.py
