[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rhino"
version = "0.1.0"
description = "A lightweight, production-grade synchronous WSGI server with auto-reload support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bhavani Shankar Mukka", email = "shankarbhavani862@gmail.com"}
]
keywords = ["wsgi", "server", "web", "http", "flask", "django"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
]

dependencies = []

[project.optional-dependencies]
reload = ["watchdog>=3.0.0"]
dev = [
    "watchdog>=3.0.0",
    "pytest>=7.0.0",
    "flask>=2.0.0",
]

[project.scripts]
rhino = "rhino.cli:main"

[project.urls]
Homepage = "https://github.com/Shankar-105/rhino"
Documentation = "https://github.com/Shankar-105/rhino#readme"
Repository = "https://github.com/Shankar-105/rhino"

[tool.setuptools.packages.find]
where = ["."]
include = ["rhino*"]

[tool.setuptools.package-data]
rhino = ["py.typed"]
