[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iotaX"
version = "0.1.0"
description = "iotaX - A lightweight, production-grade synchronous WSGI server with auto-reload support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bhavani Shankar Mukka", email = "shankarbhavani862@gmail.com"}
]
keywords = ["wsgi", "server", "web", "http", "flask", "django"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "watchdog>=3.0.0",
]

[project.scripts]
iotaX = "iotaX.cli:main"

[project.urls]
Homepage = "https://github.com/Shankar-105/iotaX"
Documentation = "https://github.com/Shankar-105/iotaX#readme"
Repository = "https://github.com/Shankar-105/iotaX"

[tool.setuptools.packages.find]
where = ["."]
include = ["iotaX*"]

[tool.setuptools.package-data]
iotaX = ["py.typed"]
